jenkins/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-app # ชื่อนี้ห้ามเปลี่ยน เพราะ Ingress วิ่งมาที่นี่
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-purple-web
  template:
    metadata:
      labels:
        app: my-purple-web
    spec:
      securityContext:
        runAsUser: 0
      containers:
      - name: nginx-container # ชื่อคอนเทนเนอร์
        image: my-nginx-web:latest
        # --- เพิ่มส่วนนี้เข้าไปเพื่อให้แก้ Git และลง kubectl อัตโนมัติ ---
        lifecycle:
          postStart:
            exec:
              command: 
              - /bin/sh
              - -c
              - |
                git config --system --add safe.directory '*'
                if [ ! -f /usr/local/bin/kubectl ]; then
                  curl -LO https://dl.k8s.io/release/v1.29.3/bin/linux/amd64/kubectl
                  chmod +x kubectl
                  mv kubectl /usr/local/bin/
                fi
        # -----------------------------------------------------------
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: jenkins-storage
          mountPath: /var/jenkins_home
      volumes:
      - name: jenkins-storage
        persistentVolumeClaim:
          claimName: jenkins-pvc
