jenkins/web-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-app # ชื่อชิ้นงาน แยกคนละชื่อกับ jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-purple-web
  template:
    metadata:
      labels:
        app: my-purple-web
    spec:
      containers:
      - name: nginx-container
        image: my-nginx-web:latest
        ports:
        - containerPort: 80
